完善id ip频率控制

--- a/SecProxy/conf/app.conf
+++ b/SecProxy/conf/app.conf
@@ -20,6 +20,14 @@ redis_proxy2layer_idle_timeout = 300
 write_proxy2layer_goroutine_num = 16
 red_layer2proxy_goroutine_num = 16
 
+;redis 业务逻辑层->接入层
+redis_layer2proxy_addr=192.168.14.200:6379
+redis_layer2proxy_idle = 64
+redis_layer2proxy_active = 0
+redis_layer2proxy_idle_timeout = 300
+write_layer2proxy_goroutine_num = 16
+read_layer2proxy_goroutine_num = 16
+
 #redus的配置参数
 etcd_addr=127.0.0.1:2379
 etcd_timeout=5
@@ -32,9 +40,15 @@ log_level = debug
 
 #cookie
 cookie_secretKey=3JxykLjaE0pTOMq1R95lMGHJKL94f7y0
-user_sec_access_limit = 1
+
 refer_witeList=localhost,baidu.com,qq.com/seckill
+
+#频率控制
+user_sec_access_limit = 1
 ip_sec_access_limit = 50
+user_min_access_limit = 10
+ip_min_access_limit = 500
+
 
 [prod]
 redis_addr=127.0.0.1:6379
